--- a/css/jjt.css
+++ b/css/jjt.css
@@ -10,7 +10,7 @@ body, html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1 {
+.bgimg-1, .bgimg-2 {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -23,12 +23,18 @@ body, html {
     min-height: 100%;
 }
 
+/* Second image (Portfolio) */
+.bgimg-2 {
+    background-image: url("/img/home01.jpg");
+    min-height: 400px;
+}
+
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
-    .bgimg-1 {
+    .bgimg-1, .bgimg-2 {
         background-attachment: scroll;
     }
 }
