--- a/css/jjt.css
+++ b/css/jjt.css
@@ -9,6 +9,10 @@ body, html {
     line-height: 1.5;
 }
 
+a.jj-noline {
+    text-decoration: none; 
+}
+
 /* Create a Parallax Effect */
 .bgimg-1, .bgimg-2 {
     background-attachment: fixed;
@@ -26,7 +30,7 @@ body, html {
 /* Second image (Portfolio) */
 .bgimg-2 {
     background-image: url("/img/home01.jpg");
-    min-height: 400px;
+    min-height: 200px;
 }
 
 .w3-wide {letter-spacing: 10px;}
