--- a/_layouts/track.html
+++ b/_layouts/track.html
@@ -5,7 +5,23 @@
 
   <body>
 
-    {{ content }}
+    <div class="w3-display-container w3-opacity-min">
+        <img src="/img/mountains.jpg" style="width:100%;height:200px;">
+        <!--div class="w3-display-topmiddle" style="white-space:nowrap;">
+            <img class="w3-image" src="/img/jjtrekking-logo.png" alt="J&amp;J Trekking">
+        </div-->
+        <!--div class="w3-display-middle" style="white-space:nowrap;">
+            <h1 class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">{{ page.title }}</h1>
+        </div-->
+    </div>
+
+    <div class="w3-content w3-container w3-padding-32">
+        <h1 class="w3-center w3-xxlarge w3-wide">{{ page.title }}</h1>
+    </div>
+
+    <div class="w3-content w3-container w3-padding-32 w3-large">
+        {{ content }}
+    </div>
 
     {% include footer.html %}
 
