--- a/_layouts/track.html
+++ b/_layouts/track.html
@@ -6,7 +6,7 @@
   <body>
 
     <div class="w3-display-container w3-opacity-min">
-        <img src="/img/mountains.jpg" style="width:100%;height:200px;">
+        <img src="/img/mountains.jpg" style="width:100%;min-height:200px;max-height:400px;">
         <!--div class="w3-display-topmiddle" style="white-space:nowrap;">
             <img class="w3-image" src="/img/jjtrekking-logo.png" alt="J&amp;J Trekking">
         </div-->
