--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,32 +1,61 @@
-<!-- Navbar (sit on top) -->
+
+
+{% assign tracks = site.tracks %}
+{% assign groups = tracks | group_by: "gruppo" | sort: "title" %}
+
+
+
 <div class="w3-top">
   <div class="w3-bar" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+    <a class="w3-bar-item w3-button w3-hover-black w3-right" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#home" class="w3-bar-item w3-button w3-text-black">J&amp;J Trekking</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fa fa-user"></i> CHI SIAMO</a>
-    <a href="#tracks" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fa fa-th"></i> ITINERARI</a>
+    <a href="#home" class="w3-bar-item w3-button">HOME</a>
   </div>
 
   <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">CHI SIAMO</a>
+  <div id="navDemo" class="w3-sidebar w3-bar-block w3-card-2 w3-animate-right w3-white" style="display:none; right:0; width:25%;">
     <a href="#tracks" class="w3-bar-item w3-button" onclick="toggleFunction()">ITINERARI</a>
+
+    {% for group in groups %}
+        <a href="/#track-{{ group.name | slugify }}" class="w3-bar-item w3-button">{{ group.name }}</a>
+    {% endfor %}
+
+    {% for group in groups %}
+        <button class="w3-button w3-block w3-left-align" onclick="myAccFunc('menu-{{ group.name | slugify }}')">
+          {{ group.name }} <i class="fa fa-caret-down"></i>
+        </button>
+        <div id="menu-{{ group.name | slugify }}" class="w3-hide w3-white w3-card-2">
+            {% for item in group.items %}
+                <a href="{{ site.url }}{{ item.url }}" class="w3-bar-item w3-button">{{ item.title }}</a>
+            {% endfor %}
+        </div>
+    {% endfor %}
+
+
+
   </div>
 </div>
+<!--
 
+<div class="w3-sidebar w3-bar-block w3-card-2 w3-animate-right" style="display:none; right:0;" id="rightMenu">
+    <button onclick="closeRightMenu()" class="w3-bar-item w3-button w3-large">Chiudi &times;</button>
+    <a href="#" class="w3-bar-item w3-button">Link 1</a>
+    <a href="#" class="w3-bar-item w3-button">Link 2</a>
+    <a href="#" class="w3-bar-item w3-button">Link 3</a>
+</div>
+
+<button class="w3-button w3-teal w3-xlarge w3-right" onclick="openRightMenu()">&#9776;</button>
+-->
 <script>
-    // Change style of navbar on scroll
-    window.onscroll = function() {myFunction()};
-    function myFunction() {
-        var navbar = document.getElementById("myNavbar");
-        if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-            navbar.className = "w3-bar" + " w3-card-2" + " w3-animate-top" + " w3-white";
-        } else {
-            navbar.className = navbar.className.replace(" w3-card-2 w3-animate-top w3-white", "");
-        }
+
+    function openRightMenu() {
+        document.getElementById("rightMenu").style.display = "block";
     }
+    function closeRightMenu() {
+        document.getElementById("rightMenu").style.display = "none";
+    }
+
 
     // Used to toggle the menu on small screens when clicking on the menu button
     function toggleFunction() {
@@ -37,4 +66,17 @@
             x.className = x.className.replace(" w3-show", "");
         }
     }
+
+    function myAccFunc(id) {
+        var x = document.getElementById(id);
+        if (x.className.indexOf("w3-show") == -1) {
+            x.className += " w3-show";
+            x.previousElementSibling.className += " w3-green";
+        } else {
+            x.className = x.className.replace(" w3-show", "");
+            x.previousElementSibling.className =
+            x.previousElementSibling.className.replace(" w3-green", "");
+        }
+    }
+
 </script>
