--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+    {% include head.html %}
+    {% include header.html %}
 
-  <body>
+    <body>
 
-    {{ content }}
+        {{ content }}
 
-    {% include footer.html %}
+        {% include footer.html %}
 
-  </body>
+    </body>
 
 </html>
