--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
 
-  {% include head.html %}
-
-  <body>
-
-    {{ content }}
-
-    {% include footer.html %}
-
-  </body>
-
-</html>
+{{ content }}
