--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,12 @@
 <footer class="w3-center w3-gray w3-padding-16">
   <div class="w3-large w3-section">
     <p>J&amp;J Trekking</p>
+    <p>
+      <a itemprop="github" href="https://github.com/github_username" title="Github" target="_blank">
+        <svg>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-github"> </use>
+        </svg>
+      </a>
   </div>
 </footer>
 <!-- made by Johnny Walker in the Summer of 2017 -->
